syntax = "proto3";

package skopa.core;

service CountryService {
  rpc List(CountryListQuery) returns (CountryListResponse);
}

message CountryListQuery {
  uint32 limit = 1;
  uint32 offset = 2;
}

message CountryListResponse {
  repeated Country items = 1;
  uint32 count = 2;
}

message Country {
  uint32 id =1;
  string code = 2;
  string name = 3;
  uint32 payment_gateway_id = 4;
}

